--- a/proposal_assignment.ipynb
+++ b/proposal_assignment.ipynb
@@ -44,25 +44,14 @@
    "metadata": {},
    "source": [
     "project proposal\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-93e37989bcab>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-93e37989bcab>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    project proposal\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "project proposal"
+    "\n",
+    "stochastic  volatility model is the canonical method to model asset return volatility. Nonetheless, due to it’s model complexity, the stochastic models usually don’t have closed form analytic solution and, computuational-heavy to calibrate. Monte carlo markov chain has grown to be one of the most effecitive and popular tools in sthochastic volatitlyi model, where prior and data are feed into the model and posterior is the calibrated model parameters of interest. \n",
+    "\n",
+    "\n",
+    "We have noticed that the VIX index has been rather volatile since the outbreak of COVID-19 and peaked in March 2019, while the traditional stochastic volatility fails to capture the spike due to the inactivity to model exogenous shock.  \n",
+    "\n",
+    "We proposed to extend the canonical stochastic volatility to incorporate covid-19 data so that we can \n",
+    "The project tends to combine the canonical stochastic volaitn model setting\n"
    ]
   },
   {
