jian add project proposal

--- a/proposal_assignment.ipynb
+++ b/proposal_assignment.ipynb
@@ -43,15 +43,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "project proposal\n",
+    "Project Proposal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The stochastic volatility model is the canonical method to model asset return volatility. Nonetheless, the stochastic models usually don’t have closed-form analytic solution and computational-heavy to calibrate due to model complexity. Monte Carlo Markov Chain has grown to be one of the most effective and popular tools in analyzing the stochastic volatility model. Priors and data are fed into the model, and posteriors are the calibrated model parameters of interest. \n",
     "\n",
-    "stochastic  volatility model is the canonical method to model asset return volatility. Nonetheless, due to it’s model complexity, the stochastic models usually don’t have closed form analytic solution and, computuational-heavy to calibrate. Monte carlo markov chain has grown to be one of the most effecitive and popular tools in sthochastic volatitlyi model, where prior and data are feed into the model and posterior is the calibrated model parameters of interest. \n",
+    "We have noticed that the VIX index has been rather volatile since the outbreak of COVID-19 and peaked in March 2019. The traditional stochastic volatility fails to capture the spike due to the inactivity to model exogenous shock.  \n",
     "\n",
+    "We proposed to extend the canonical stochastic volatility to incorporate covid-19 data under a Monte Carlo Markov Chain framework. The following formulas set the extended stochastic volatility model.\n",
     "\n",
-    "We have noticed that the VIX index has been rather volatile since the outbreak of COVID-19 and peaked in March 2019, while the traditional stochastic volatility fails to capture the spike due to the inactivity to model exogenous shock.  \n",
-    "\n",
-    "We proposed to extend the canonical stochastic volatility to incorporate covid-19 data so that we can \n",
-    "The project tends to combine the canonical stochastic volaitn model setting\n"
+    "We plan to sample and calibrate the extended stochastic volatility model. Furthermore, we will conduct a model comparison to check whether the comprehensive model supersedes the canonical model. "
    ]
   },
   {
