--- a/proposal_assignment.ipynb
+++ b/proposal_assignment.ipynb
@@ -23,9 +23,9 @@
     "\n",
     "Form a team of between one and four students (no more) and choose a project. This project could come from the ideas that you submitted or some other idea if you get a sudden flash of inspiration. Flesh out the project in detail -- When we say “flesh it out in detail”, we mean properly load the data into the notebook, describe in words what you want to explore, and create a couple draft quality visualizations (don’t worry about making them pretty) that whets a reader’s appetite.\n",
     "\n",
-    "Please include the names of all group members in the b:\n",
+    "Please include the names of all group members in the below:\n",
     "\n",
-    "* Group member names\n",
+    "* Jian ZhouGroup member names\n",
     "\n",
     "**Please note that each person should make a copy of the notebook and turn it in!**\n"
    ]
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Project Proposal"
+    "### Project Proposal"
    ]
   },
   {
@@ -60,11 +60,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Data"
+   ]
   },
   {
    "cell_type": "code",
@@ -74,8 +74,15 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Graphs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
