--- a/proposal_assignment.ipynb
+++ b/proposal_assignment.ipynb
@@ -25,7 +25,9 @@
     "\n",
     "Please include the names of all group members in the below:\n",
     "\n",
-    "* Jian ZhouGroup member names\n",
+    "* Jian Zhou\n",
+    "* Bo Sun\n",
+    "* Man Chen\n",
     "\n",
     "**Please note that each person should make a copy of the notebook and turn it in!**\n"
    ]
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -78,6 +80,19 @@
    "metadata": {},
    "source": [
     "### Graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# todo\n",
+    "\n",
+    "# covid-19 versus sp 500\n",
+    "# covid-19 versus vix\n",
+    "# covid-19 log number versus vix"
    ]
   },
   {
