--- a/proposal_assignment.ipynb
+++ b/proposal_assignment.ipynb
@@ -65,6 +65,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$\\begin{align*}\n",
+    " y_t = \\beta \\epsilon_t e^{h_t/2} \\qquad \\qquad &\\epsilon_t \\sim N(0,1) \\\\\n",
+    " h_{t} = \\mu + \\phi (h_{t-1} - \\mu) + \\sigma_\\eta \\eta_{t-1} + \\color{red}{ \\beta (lnC_t - lnC_{t-1})} \\quad  &\\eta_{t-1} \\sim N(0,1) \\quad \\beta \\sim N(1,10) \\\\\n",
+    " h_1 \\sim N(\\mu, \\sigma_\\eta^2/(1-\\phi^2))\n",
+    "\\end{align*}$$<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Data"
    ]
   },
@@ -119,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
