--- a/proposal_assignment.ipynb
+++ b/proposal_assignment.ipynb
@@ -466,16 +466,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a2751c750>"
+       "<matplotlib.legend.Legend at 0x1a279c47d0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -495,8 +495,8 @@
    "source": [
     "fig,ax = plt.subplots(figsize=(15,5))\n",
     "# make a plot\n",
-    "ax.plot(data.index, data['cases_growth_US'], label=\"US\")\n",
-    "ax.plot(data.index, data['cases_growth_global'], label=\"Global\")\n",
+    "ax.plot(data.index, data.loc[:, 'cases_growth_US'], label=\"US\")\n",
+    "ax.plot(data.index, data.loc[:, 'cases_growth_global'], label=\"Global\")\n",
     "ax.set_ylabel(\"log-difference of the confirmed cases\", fontsize=14)\n",
     "plt.legend()"
    ]
