--- a/ProjectReport/Project_Report.ipynb
+++ b/ProjectReport/Project_Report.ipynb
@@ -574,33 +574,8 @@
    },
    "outputs": [],
    "source": [
-    "covid_19_data=covid_19_data.merge(covid_19_EUcountry['cases_growth_EU'],left_index=True, right_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "covid_19_data=covid_19_data.drop(index=['Unnamed: 0'])\n",
-    "covid_19_data=covid_19_data.fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "covid_19_data=covid_19_data.merge(covid_19_EUcountry['cases_growth_EU'],left_index=True, right_index=True)\n",
+    "covid_19_data=covid_19_data.drop(index=['Unnamed: 0']).fillna(0)\n",
     "covid_19_data.index = [datetime.datetime.strptime(i, '%m/%d/%y') for i in covid_19_data.index]"
    ]
   },
@@ -621,90 +596,10 @@
    },
    "outputs": [],
    "source": [
-    "Finance_data=finance_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "Covid_19_data=covid_19_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                  SP500        VIX    IDVIX   VHSI  JPVIX  EUVIX\nDate                                                            \n2019-02-28  2784.489990  14.780000  18.2775  18.93   1.52  14.78\n2019-03-01  2803.689941  13.570000  16.2750  17.10   1.43  13.57\n2019-03-05  2789.649902  14.740000  15.6575  17.55   1.44  14.74\n2019-03-06  2771.449951  15.740000  15.6100  17.41   1.33  15.74\n2019-03-07  2748.929932  16.590000  15.2925  17.51   1.34  16.59\n...                 ...        ...      ...    ...    ...    ...\n2021-01-04  3700.649902  26.969999  20.0300  19.55   1.36  26.97\n2021-01-05  3726.860107  25.340000  20.4600  19.63   1.27  25.34\n2021-01-06  3748.139893  25.070000  20.9950  20.02   1.36  25.07\n2021-01-07  3803.790039  22.370001  20.6150  20.58   1.37  22.37\n2021-01-08  3824.679932  21.559999  20.6400  20.15   1.32  21.56\n\n[403 rows x 6 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SP500</th>\n      <th>VIX</th>\n      <th>IDVIX</th>\n      <th>VHSI</th>\n      <th>JPVIX</th>\n      <th>EUVIX</th>\n    </tr>\n    <tr>\n      <th>Date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2019-02-28</th>\n      <td>2784.489990</td>\n      <td>14.780000</td>\n      <td>18.2775</td>\n      <td>18.93</td>\n      <td>1.52</td>\n      <td>14.78</td>\n    </tr>\n    <tr>\n      <th>2019-03-01</th>\n      <td>2803.689941</td>\n      <td>13.570000</td>\n      <td>16.2750</td>\n      <td>17.10</td>\n      <td>1.43</td>\n      <td>13.57</td>\n    </tr>\n    <tr>\n      <th>2019-03-05</th>\n      <td>2789.649902</td>\n      <td>14.740000</td>\n      <td>15.6575</td>\n      <td>17.55</td>\n      <td>1.44</td>\n      <td>14.74</td>\n    </tr>\n    <tr>\n      <th>2019-03-06</th>\n      <td>2771.449951</td>\n      <td>15.740000</td>\n      <td>15.6100</td>\n      <td>17.41</td>\n      <td>1.33</td>\n      <td>15.74</td>\n    </tr>\n    <tr>\n      <th>2019-03-07</th>\n      <td>2748.929932</td>\n      <td>16.590000</td>\n      <td>15.2925</td>\n      <td>17.51</td>\n      <td>1.34</td>\n      <td>16.59</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2021-01-04</th>\n      <td>3700.649902</td>\n      <td>26.969999</td>\n      <td>20.0300</td>\n      <td>19.55</td>\n      <td>1.36</td>\n      <td>26.97</td>\n    </tr>\n    <tr>\n      <th>2021-01-05</th>\n      <td>3726.860107</td>\n      <td>25.340000</td>\n      <td>20.4600</td>\n      <td>19.63</td>\n      <td>1.27</td>\n      <td>25.34</td>\n    </tr>\n    <tr>\n      <th>2021-01-06</th>\n      <td>3748.139893</td>\n      <td>25.070000</td>\n      <td>20.9950</td>\n      <td>20.02</td>\n      <td>1.36</td>\n      <td>25.07</td>\n    </tr>\n    <tr>\n      <th>2021-01-07</th>\n      <td>3803.790039</td>\n      <td>22.370001</td>\n      <td>20.6150</td>\n      <td>20.58</td>\n      <td>1.37</td>\n      <td>22.37</td>\n    </tr>\n    <tr>\n      <th>2021-01-08</th>\n      <td>3824.679932</td>\n      <td>21.559999</td>\n      <td>20.6400</td>\n      <td>20.15</td>\n      <td>1.32</td>\n      <td>21.56</td>\n    </tr>\n  </tbody>\n</table>\n<p>403 rows × 6 columns</p>\n</div>"
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Finance_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "            cases_growth_US  cases_growth_global  cases_growth_India  \\\n2020-01-22         0.000000             0.000000            0.000000   \n2020-01-23         0.000000             0.000000            0.000000   \n2020-01-24         0.000000             0.000000            0.000000   \n2020-01-25         0.000000             0.000000            0.000000   \n2020-01-26         0.000000             0.000000            0.000000   \n...                     ...                  ...                 ...   \n2021-01-27         0.007188             0.007723            0.001291   \n2021-01-28         0.006974             0.007616            0.001284   \n2021-01-29         0.006765             0.007519            0.001270   \n2021-01-30         0.006567             0.007417            0.001255   \n2021-01-31         0.006373             0.007309            0.001243   \n\n            cases_growth_Japan  cases_growth_HK  cases_growth_EU  \n2020-01-22            0.000000         0.000000         0.000000  \n2020-01-23            0.000000         0.000000         0.000000  \n2020-01-24            0.000000         0.000000         0.000000  \n2020-01-25            0.000000         0.000000         0.000000  \n2020-01-26            0.000000         0.000000         0.000000  \n...                        ...              ...              ...  \n2021-01-27            0.015087         0.007208         0.008253  \n2021-01-28            0.014146         0.007142         0.008111  \n2021-01-29            0.013208         0.006975         0.007948  \n2021-01-30            0.012327         0.006712         0.007797  \n2021-01-31            0.011542         0.006416         0.007669  \n\n[232 rows x 6 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>cases_growth_US</th>\n      <th>cases_growth_global</th>\n      <th>cases_growth_India</th>\n      <th>cases_growth_Japan</th>\n      <th>cases_growth_HK</th>\n      <th>cases_growth_EU</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-01-22</th>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2020-01-23</th>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2020-01-24</th>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2020-01-25</th>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>2020-01-26</th>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2021-01-27</th>\n      <td>0.007188</td>\n      <td>0.007723</td>\n      <td>0.001291</td>\n      <td>0.015087</td>\n      <td>0.007208</td>\n      <td>0.008253</td>\n    </tr>\n    <tr>\n      <th>2021-01-28</th>\n      <td>0.006974</td>\n      <td>0.007616</td>\n      <td>0.001284</td>\n      <td>0.014146</td>\n      <td>0.007142</td>\n      <td>0.008111</td>\n    </tr>\n    <tr>\n      <th>2021-01-29</th>\n      <td>0.006765</td>\n      <td>0.007519</td>\n      <td>0.001270</td>\n      <td>0.013208</td>\n      <td>0.006975</td>\n      <td>0.007948</td>\n    </tr>\n    <tr>\n      <th>2021-01-30</th>\n      <td>0.006567</td>\n      <td>0.007417</td>\n      <td>0.001255</td>\n      <td>0.012327</td>\n      <td>0.006712</td>\n      <td>0.007797</td>\n    </tr>\n    <tr>\n      <th>2021-01-31</th>\n      <td>0.006373</td>\n      <td>0.007309</td>\n      <td>0.001243</td>\n      <td>0.011542</td>\n      <td>0.006416</td>\n      <td>0.007669</td>\n    </tr>\n  </tbody>\n</table>\n<p>232 rows × 6 columns</p>\n</div>"
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Covid_19_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                  SP500        VIX    IDVIX   VHSI  JPVIX  EUVIX  \\\n2020-12-28  3735.360107  21.700001  20.4275  20.31   1.35  21.70   \n2020-12-29  3727.040039  23.080000  20.7900  19.85   1.26  23.08   \n2020-12-30  3732.040039  22.770000  21.1100  19.36   1.21  22.77   \n\n            cases_growth_US  cases_growth_global  cases_growth_India  \\\n2020-12-28         0.011029             0.008052            0.002303   \n2020-12-29         0.010624             0.007970            0.002253   \n2020-12-30         0.010267             0.007858            0.002200   \n\n            cases_growth_Japan  cases_growth_HK  cases_growth_EU  \n2020-12-28            0.014398         0.009012         0.012027  \n2020-12-29            0.014677         0.008502         0.011666  \n2020-12-30            0.014978         0.008069         0.011299  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SP500</th>\n      <th>VIX</th>\n      <th>IDVIX</th>\n      <th>VHSI</th>\n      <th>JPVIX</th>\n      <th>EUVIX</th>\n      <th>cases_growth_US</th>\n      <th>cases_growth_global</th>\n      <th>cases_growth_India</th>\n      <th>cases_growth_Japan</th>\n      <th>cases_growth_HK</th>\n      <th>cases_growth_EU</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2020-12-28</th>\n      <td>3735.360107</td>\n      <td>21.700001</td>\n      <td>20.4275</td>\n      <td>20.31</td>\n      <td>1.35</td>\n      <td>21.70</td>\n      <td>0.011029</td>\n      <td>0.008052</td>\n      <td>0.002303</td>\n      <td>0.014398</td>\n      <td>0.009012</td>\n      <td>0.012027</td>\n    </tr>\n    <tr>\n      <th>2020-12-29</th>\n      <td>3727.040039</td>\n      <td>23.080000</td>\n      <td>20.7900</td>\n      <td>19.85</td>\n      <td>1.26</td>\n      <td>23.08</td>\n      <td>0.010624</td>\n      <td>0.007970</td>\n      <td>0.002253</td>\n      <td>0.014677</td>\n      <td>0.008502</td>\n      <td>0.011666</td>\n    </tr>\n    <tr>\n      <th>2020-12-30</th>\n      <td>3732.040039</td>\n      <td>22.770000</td>\n      <td>21.1100</td>\n      <td>19.36</td>\n      <td>1.21</td>\n      <td>22.77</td>\n      <td>0.010267</td>\n      <td>0.007858</td>\n      <td>0.002200</td>\n      <td>0.014978</td>\n      <td>0.008069</td>\n      <td>0.011299</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "Finance_data=finance_data\n",
+    "Covid_19_data=covid_19_data\n",
     "data = Finance_data.merge(Covid_19_data, left_index=True, right_index=True)\n",
-    "data.tail(3)"
+    "data.head(3)"
    ]
   },
   {
@@ -2312,7 +2207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Extension: Two-State AR1 Stochastic Volatility"
+    "### Model Extension: Two-State Stochastic Volatility"
    ]
   },
   {
