--- a/ProjectReport/Project_Report.ipynb
+++ b/ProjectReport/Project_Report.ipynb
@@ -520,33 +520,10 @@
     "covid_19HK = _covid_19HK.pipe(pd.DataFrame.drop, ['Province/State', 'Lat', 'Long'], 1) \\\n",
     "        .pipe(pd.DataFrame.set_index, 'Country/Region').T\n",
     "covid_19_HK= np.array(np.log(covid_19HK[['Hong Kong']].sum(axis=1).replace(0,1)).diff().rolling(14, win_type='gaussian').mean(std=3))       \n",
-    "covid_19HK['cases_growth_HK']=covid_19_HK"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "covid_19HK['cases_growth_HK']=covid_19_HK\n",
     "covid_19_data=covid_19_data.merge(covid_19HK,left_index=True, right_index=True)\n",
-    "covid_19_data=covid_19_data.drop(columns=['Hong Kong'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "covid_19_data=covid_19_data.drop(columns=['Hong Kong'])\n",
+    "\n",
     "_covid_19EU =pd.read_csv(os.path.join(os.curdir, \"Data/EUcovid.csv\"))\n",
     "\n",
     "\n",
@@ -561,19 +538,8 @@
     "        covid_19_EUcountry['cases_growth_' + country] = np.log(covid_19EU[[country]].sum(axis=1).replace(0,1)).diff().rolling(14, win_type='gaussian').mean(std=3)                                  \n",
     "\n",
     "\n",
-    "covid_19_EUcountry['cases_growth_EU'] = covid_19_EUcountry.mean(axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "covid_19_EUcountry['cases_growth_EU'] = covid_19_EUcountry.mean(axis=1)\n",
+    "\n",
     "covid_19_data=covid_19_data.merge(covid_19_EUcountry['cases_growth_EU'],left_index=True, right_index=True)\n",
     "covid_19_data=covid_19_data.drop(index=['Unnamed: 0']).fillna(0)\n",
     "covid_19_data.index = [datetime.datetime.strptime(i, '%m/%d/%y') for i in covid_19_data.index]"
@@ -1351,11 +1317,11 @@
     "#### Step 5 - Integrate the above two models into an AR-ARCH model\n",
     "Based on our previous analysis, we can roughly choose the mean model as the AR(2) model, and the volatility model as the ARCH(8) model.\n",
     "\n",
-    "$$\\begin{align*}\n",
+    "\\begin{align*}\n",
     "\\qquad & r_t = c_1 + \\sum_{i=1}^3{\\phi_i r_{t-i}} + \\epsilon_t \\\\\n",
     "\\qquad & \\epsilon_t = u_t \\sigma_t  \\qquad &u_t \\sim N(0,1) \\\\\n",
     "\\qquad & \\sigma_t^2 = k + \\sum_{i=1}^{8}{\\alpha_i \\sigma_{t-i}^2} \\\\\n",
-    "\\end{align*}$$\n",
+    "\\end{align*}\n",
     "\n",
     "We use the arch package in Python to implement the model."
    ]
@@ -1423,11 +1389,11 @@
    "source": [
     "We get our fitting model:\n",
     "\n",
-    "$$\\begin{align*}\n",
+    "\\begin{align*}\n",
     "\\qquad & r_t = 0.1641 - 0.0145 r_{t-1} + 0.300 r_{t-2} - 0.1584 r_{t-3} + \\epsilon_t \\\\\n",
     "\\qquad & \\epsilon_t = u_t \\sigma_t  \\qquad & u_t \\sim N(0,1) \\\\\n",
     "\\qquad & \\sigma_t^2 = 1.3317 + 0.1294 \\sigma_{t-1}^2 + 0.2318 \\sigma_{t-2}^2 + 0.1716 \\sigma_{t-4}^2 + 0.0483 \\sigma_{t-7}^2 \\\\\n",
-    "\\end{align*}$$\n",
+    "\\end{align*}\n",
     "\n",
     "From the statistic, our model is not so suitable, since the R square and adjusted R square are both low, and AIC, BIC are both high. We then take a loot at the fitting result to find our problems."
    ]
